--- a/styles/launchpad.module.scss
+++ b/styles/launchpad.module.scss
@@ -106,7 +106,7 @@
         border: 1px solid #cfcfcf;
         border-radius: 20px;
         margin-right: 20px;
-        background: #fff url(../public/launchpad/satoshiflow.jpeg) no-repeat
+        background: #fff url(../public/launchpad/pingme.png) no-repeat
           center/auto 100%;
       }
       .curinfo {
